<resources>
    <string name="app_name">Hiccs Arish</string>

    <string name="title_activity_image_details">GalleryDetailsActivity</string>
    <string name="list_item_news_image_content_description">News Image</string>
    <string name="list_item_news_title_label">News Title</string>
    <string name="list_item_table_course_name_label">Course</string>
    <string name="list_item_table_course_prof_name_label">Prof. Name</string>
    <string name="list_item_table_course_duration_label">Dura : tion</string>
    <string name="list_item_table_day_label">Day</string>


    <string name="hicss_full_name">المعهد العالي للعلوم التجارية والحاسب الآلي بالعريش</string>
    <string name="granted_degrees_title">الدرجات الممنوحة</string>

    <string name="granted_degrees"> درجه البكالوريوس في التجاره تخصص.
        (نظم معلومات إدارية )
• درجه البكالوريوس في التجاره تخصص.
    (محاسبه )
• درجه البكالوريوس ف التجارة تخصص.
        (إدارة الأعمال )</string>
    <string name="creation_title">النشأة</string>

    <string name="creation">أنشئ المعهد العالي للعلوم التجارية والحاسب الآلي بالقرار الوزاري
رقم 840 في 9/6/2002 المعهد معادل لدرجه بكالوريوس تجارة
التي تمنحها الجامعات المصرية بالقرار الوزارى رقم 75 بتاريخ
17/5/2007 وذلك في جميع التخصصات بالمعهد بالمع
    </string>
    <string name="departments_title">الشعب</string>

    <string name="departments"> شعبه نظم المعلومات الإدارية والحاسب ألي.
• شعبه المعلومات التجارية والتخصص فيها يبدأ من الفرقة الرابعة في إحدى التخصص
في إحدى التخصص (محاسبه -وإدارة اعمال)
    </string>

    <string name="duration_of_study_title">فترة الدراسة</string>

    <string name="duration_of_study">• مدة الدراسة ف المعهد 4 سنوات دراسية.
    </string>
    <string name="admission_requirements_title">القبول في المعهد</string>

    <string name="admission_requirements">
• المعهد يقبل المؤهلات التالية:.
        \n
1-الثانويه العامه والأزهر بشعبه.
        \n
2-الثانويه الصناعية 3، 5 سنوات.
        \n
3-الثانوية التجارية 3، 5 سنوات.
        \n
4- المعهد الفنية التجارية يقبل بالفرقة الثانية.
        \n
5-المعاهد الفنية الصناعية.
        \n
• يتم قبول الطلاب بالمعهد من أبناء جمهورية  مصر العربيه عن طريق
• مكتب التنسيق ويكون قبول طلاب من غير أبناء جمهوريه مصر العربيه عن طريق إدارة بوزارة التعليم العالي.
• يقبل المعهد التحويلات من جميع المعاهد والجامعات الخاصة والحكومية.

    </string>
    <string name="goals_title">اهداف المعهد</string>

    <string name="goals">-بناء شخصية قادرة علي أتخاذ القرار.
2-تخصص التنمية الشاملة.
3-العداد جيل مسئول من الشباب .
4 -الإسهام في إقامة مجتمع منتج.
*الأنشطة الطلابية.
• يهتم المعهد برعاية الأنشطة الطلابية واتاحه الفرص أمام الطلاب لممارسة هوياتهم المختلفه.
• يهتم المعهد بالحفلات والمسابقات الرياضية.
• يهتم المعهد بالندوات والمسابقات الثقافية والدينيه.
• يهتم المعهد بالانشطه المختلفة مثل الموسيقي والرسم والغناء الجتماعي والفنون الشعبة والمسرح والفنون التشكيلية.
*المكتبة الأكاديمية بالمعهد.
• تقدم المكتبات دورا فعال في بناء شخصيات من خلال قدرات
متعددة لكبار الادباء والعلماء لذلك يوفر المعهد للطلاب الاطلاع علي مراجع علمية وثقافية مختلفه وسهل للطلاب للبحث ف المراجع.
    </string>
    <string name="address_title">الفروع</string>

    <string name="address">جمهوريه مصر العربيه  محافظة شمال سيناء العريش ضاحية الجيش
خلف مديرية التربية والتعليم.
    مقر مبني رقم 1المجمع التعليمى بمدينة الإسماعيلية
• بجوار معسكر عزالدين اول طرق مصر اسماعليه
    </string>

    <string name="branches">2</string>
    <string name="connection_info_title">للتواصل</string>

    <string name="connection_info">
E-mail:m-saihizoo@hotmail.com
ت/ 0683327605_0683327604
فاكس / 0683326604</string>
    <string name="title_activity_maps">Map</string>


</resources>