<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.HicssInfoActivity">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">


            <LinearLayout

                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/list_item_news_parent_margin"
                android:clickable="true"
                android:focusable="true"
                android:gravity="right"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/logo1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"

                        app:srcCompat="@drawable/logo1" />

                    <TextView
                        android:id="@+id/tvcnewssss"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:layout_weight="6"
                        android:gravity="center"

                        android:text="@string/hicss_full_name"
                        android:textAllCaps="true"
                        android:textColor="#00004d"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/logo2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/logo2" />


                </LinearLayout>

                <view
                    style="@style/Widget.Design.Snackbar"
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/creation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:text="@string/creation"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <view
                        style="@style/Widget.Design.Snackbar"
                        android:layout_width="1.5dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/creation_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/creation_title"
                        android:textAllCaps="true"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="30dp" />

                </LinearLayout>

                <view
                    style="@style/Widget.Design.Snackbar"
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/granted_degrees_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="4"
                        android:gravity="right"
                        android:text="@string/granted_degrees"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <view
                        style="@style/Widget.Design.Snackbar"
                        android:layout_width="1.5dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/granted_degrees"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/granted_degrees_title"
                        android:textAllCaps="true"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="30dp" />

                </LinearLayout>

                <view
                    style="@style/Widget.Design.Snackbar"
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/duration_of_study"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="4"
                        android:gravity="right"
                        android:text="@string/duration_of_study"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <view
                        style="@style/Widget.Design.Snackbar"
                        android:layout_width="1.5dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/duration_of_study_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/duration_of_study_title"
                        android:textAllCaps="true"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="30dp" />

                </LinearLayout>

                <view
                    style="@style/Widget.Design.Snackbar"
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/departments"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="4"
                        android:gravity="right"
                        android:text="@string/departments"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <view
                        style="@style/Widget.Design.Snackbar"
                        android:layout_width="1.5dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/departments_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/departments_title"
                        android:textAllCaps="true"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="30dp" />

                </LinearLayout>

                <view
                    style="@style/Widget.Design.Snackbar"
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/admission_requirements"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="4"
                        android:gravity="right"
                        android:text="@string/admission_requirements"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <view
                        style="@style/Widget.Design.Snackbar"
                        android:layout_width="1.5dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/admission_requirements_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/admission_requirements_title"
                        android:textAllCaps="true"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="30dp" />

                </LinearLayout>

                <view
                    style="@style/Widget.Design.Snackbar"
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/goals"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="4"
                        android:gravity="right"
                        android:text="@string/goals"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <view
                        style="@style/Widget.Design.Snackbar"
                        android:layout_width="1.5dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/goals_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/goals_title"
                        android:textAllCaps="true"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="30dp" />

                </LinearLayout>

                <view
                    style="@style/Widget.Design.Snackbar"
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/address"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="4"
                        android:gravity="right"
                        android:text="@string/address"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <view
                        style="@style/Widget.Design.Snackbar"
                        android:layout_width="1.5dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/address_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/address_title"
                        android:textAllCaps="true"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="30dp" />

                </LinearLayout>

                <view
                    style="@style/Widget.Design.Snackbar"
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/connection_info"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="4"
                        android:gravity="right"
                        android:text="@string/connection_info"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <view
                        style="@style/Widget.Design.Snackbar"
                        android:layout_width="1.5dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/connection_info_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/connection_info_title"
                        android:textAllCaps="true"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="30dp" />

                </LinearLayout>


            </LinearLayout>
        </TableLayout>

    </ScrollView>
</LinearLayout>